2019-11-18  Keith Miller  <keith_miller@apple.com>

        Enable Nullish operators by default
        https://bugs.webkit.org/show_bug.cgi?id=204308

        Reviewed by Yusuke Suzuki.

        Remove feature -> option map.

        * test262/config.yaml:

2019-11-18  Caio Lima  <ticaiolima@gmail.com>

        Skipping wasm-error-message-cross-threads.js on architectures without WASM support
        https://bugs.webkit.org/show_bug.cgi?id=204293

        Unreviewed gardening.

        * stress/ensure-code-block-is-not-precise-allocation.js:

        Skipping this test until we fix OSR to LLInt on MIPS.

        * stress/wasm-error-message-cross-threads.js:

2019-11-15  Ross Kirsling  <ross.kirsling@sony.com>

        [JSC] Anonymous built-in functions should have empty string for a name
        https://bugs.webkit.org/show_bug.cgi?id=204214

        Reviewed by Yusuke Suzuki.

        * test262/expectations.yaml:
        Mark 20 test cases as passing.

        * stress/builtin-function-name.js:
        (shouldThrow):
        * stress/private-name-as-anonymous-builtin.js:
        Fix tests which are no longer accurate.

2019-11-15  Yusuke Suzuki  <ysuzuki@apple.com>

        [JSC] DFG strength reduction should define "groups" for RegExp constant-folded result
        https://bugs.webkit.org/show_bug.cgi?id=204264

        Reviewed by Michael Saboff.

        * stress/dfg-strength-reduction-for-regexp-should-include-groups-property.js: Added.
        (shouldBe):
        (test):

2019-11-15  Yusuke Suzuki  <ysuzuki@apple.com>

        Wasm error message should be cross-thread-copied
        https://bugs.webkit.org/show_bug.cgi?id=204143

        Reviewed by Mark Lam.

        * stress/wasm-error-message-cross-threads.js: Added.
        (f):

2019-11-14  Alexey Shvayka  <shvaikalesh@gmail.com>

        Use toLength() and getIndexQuickly() in JSON.stringify
        https://bugs.webkit.org/show_bug.cgi?id=204122

        Reviewed by Yusuke Suzuki.
